[gd_scene load_steps=5 format=3 uid="uid://fbx8e7x0hb"]

[ext_resource type="Script" uid="uid://cu7vi7tu2ob4j" path="res://scenes/menus/ingame_menu.gd" id="1_rriae"]
[ext_resource type="PackedScene" uid="uid://bcdby6svlp0fj" path="res://scenes/UI/backgrounds/fade_background.tscn" id="2_ckiny"]
[ext_resource type="Theme" uid="uid://hj1r2r6llhmk" path="res://settings/ingame_menu_button_theme.tres" id="3_0rsoi"]
[ext_resource type="Script" uid="uid://cv5mje71vm85n" path="res://scripts/button/stretch_button.gd" id="4_hs1qs"]

[node name="ingame_menu" type="CanvasLayer"]
layer = 90
script = ExtResource("1_rriae")

[node name="FadeBackground" parent="." instance=ExtResource("2_ckiny")]

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.992
anchor_bottom = 1.0
offset_right = 15.3599
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
anchor_right = 0.182
anchor_bottom = 1.0
offset_right = 0.559998
alignment = 1

[node name="ContinueButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("3_0rsoi")
text = "CONTINUE_BUTTON"
clip_text = true
script = ExtResource("4_hs1qs")

[node name="SaveButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("3_0rsoi")
text = "SAVE_BUTTON"
clip_text = true
script = ExtResource("4_hs1qs")

[node name="LoadButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("3_0rsoi")
text = "LOAD_BUTTON"
clip_text = true
script = ExtResource("4_hs1qs")

[node name="SettingsButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("3_0rsoi")
text = "SETTINGS_BUTTON"
clip_text = true
script = ExtResource("4_hs1qs")

[node name="QuitButton" type="Button" parent="MenuContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("3_0rsoi")
text = "QUIT__TO_MAIN_MENU_BUTTON"
clip_text = true
script = ExtResource("4_hs1qs")

[connection signal="pressed" from="MenuContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
